<resources>
    <string name="app_name">Vangti Chai</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="_3">3</string>
    <string name="_500tk">500: </string>
    <string name="_100tk">100: </string>
    <string name="_50tk">50: </string>
    <string name="_20tk">20: </string>
    <string name="_10tk">10: </string>
    <string name="_5tk">5: </string>
    <string name="_2tk">2: </string>
    <string name="_1tk">1: </string>
    <string name="taka">Taka: </string>
    <string name="tktext">Taka: </string>
</resources>